Switch to combined setting and location assets to fix puzzle-piece gap; update effort-pile styling (stale changes)

--- a/client/effortless.scss
+++ b/client/effortless.scss
@@ -1,46 +1,3 @@
-/*
- *------
- * BGA framework: Gregory Isabelli & Emmanuel Colin & BoardGameArena
- * Effortless implementation : © Kevin Kelley <kelleyk@kelleyk.net>
- *
- * This code has been produced on the BGA studio platform for use on http://boardgamearena.com.
- * See http://en.boardgamearena.com/#!doc/Studio for more information.
- * -----
- */
-
-/*
-	This is the CSS stylesheet of your game User Interface.
-
-	Styles defined on this file will be applied to the HTML elements you define in your
-	HTML template (*.tpl), and to HTML elements you create dynamically (in effortless.js).
-
-	Usually, you are using CSS to:
-
-	1°) define the overall layout of your game (ex: place the board on the top left, place player's hand beside, place the deck on the right, ...).
-
-	2°) create your CSS-sprites: All images of your games should be gathered into a small number of image files. Then, using background-image and background-position CSS properties, you create HTML blocks that can  display these images correctly (see example below).
-
-	3°) ... anything else: It is really easy to add and remove CSS classes dynamically from your Javascript with dojo.addClass and dojo.removeClass. It is also easy to check if an element has a class (dojo.hasClass) or to get all elements with a specific class (dojo.query). This is why, very often, using CSS classes for the logic of your user interface allow you to do complex thing easily.
-*/
-
-/*
-	Example of CSS sprites (a black token and a white token, 20x20px each, embedded in the same "tokens.png" 40x20px image):
-
-	.white_token {
-		background-image: url('img/tokens.png');
-		background-position: 0px 0px;
-	}
-	.black_token {
-		background-image: url('img/tokens.png');
-		background-position: -20px 0px;
-	}
-	.token {
-		width: 20px;
-		height: 20px;
-		background-repeat: none;
-	}
-*/
-
 .ewc_setlocarea {
   // background:purple;
 }
@@ -134,7 +91,6 @@
 }
 
 .ewc_selectable:not(.ewc_selected):hover {
-  box-shadow: 0 0 3px 3px #fff;
   transition: box-shadow 0.2s;
 }
 
@@ -212,12 +168,16 @@
   position: relative;
   margin: 5px auto 0 auto;
 
-  border-radius: 20%/50%;
-  border: 2px solid #888;
+  background: #fff;
+  color: #555;
 
-  background: #555;
-  opacity: 80%;
-  color: #ccc;
+  box-shadow: 2px 2px 2px rgba(0.3, 0.3, 0.3, 0.5);
+
+  // TODO: Need to actually do the below!
+  //
+  // N.B.: In 5-player games, we reduce this to "1px 0" (in TypeScript) so that the effort-pile counters don't overlap
+  // the setting effect box.
+  padding: 2px 0;
 }
 
 .ewc_effort_counter_reserve > * {
@@ -239,7 +199,7 @@
   // we'd need to increase `right` or `margin-right` here to account for the overlapped part of the "setting" puzzle
   // piece.
   bottom: 5px;
-  right: 8px;
+  left: 0px;
 }
 
 // All children.  XXX: This doesn't actually appear to work; the cubes are still translucent!
